--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,28 @@
-# Server Configuration
+# Environment Variables Setup
+
+## Client (.env.local)
+```env
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
+
+# Backend API
+VITE_API_URL=http://localhost:5000/api
+
+#Stripe
+VITE_STRIPE_PUBLISHABLE_KEY=
+```
+
+## Server (.env)
+```env
 PORT=5000
 NODE_ENV=development
-
-# MongoDB
-MONGODB_URI=your_mongodb_atlas_connection_string_here
-
-# JWT
-JWT_SECRET=your_super_secret_jwt_key_minimum_32_characters_long
-
-# Client URL (for CORS)
+MONGODB_URI=
+JWT_SECRET=
 CLIENT_URL=http://localhost:5173
-
-# Stripe
-STRIPE_SECRET_KEY=your_stripe_secret_key_here
-
-# Firebase Admin SDK (Optional)
-FIREBASE_ADMIN_PROJECT_ID=your_project_id
-FIREBASE_ADMIN_CLIENT_EMAIL=your_client_email
-FIREBASE_ADMIN_PRIVATE_KEY="your_private_key"
+STRIPE_SECRET_KEY=
+```
